Improve loading sequence and majorly speed up unpacking